--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.19",
+    "@tanstack/react-query-devtools": "^5.91.2",
+    "axios": "^1.13.2",
+    "formik": "^2.4.9",
     "next": "16.1.4",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-paginate": "^8.3.0",
+    "use-debounce": "^10.1.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^20",
